--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "dependencies": {
     "@astrojs/netlify": "^6.3.4",
     "astro": "^5.8.0",
-    "astro-decap-cms-oauth": "^0.5.1"
+    "astro-decap-cms-oauth": "^0.5.1",
+    "sharp": "^0.34.2"
   },
   "scripts": {
     "dev": "astro dev",
