--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -2,8 +2,8 @@ backend:
   name: git-gateway # For Netlify Git Gateway, or use 'github' for direct GitHub OAuth
   branch: main # Branch to update (optional; defaults to master)
 
-media_folder: "public/uploads/media" # Changed
-public_folder: "/uploads/media"    # Changed
+media_folder: "public/galleries/main_gallery"
+public_folder: "/galleries/main_gallery"
 publish_mode: editorial_workflow # Optional: enables a review process
 
 collections:
@@ -103,12 +103,11 @@ collections:
           - { label: "Hero Subheading", name: "homepage_hero_subheading", widget: "markdown", default: "Autentické a emotivní fotografie, které vám zůstanou navždy." }
           - { label: "Hero CTA Label", name: "homepage_hero_cta_label", widget: "string", default: "Prohlédnout portfolio" }
           - { label: "Hero CTA Link", name: "homepage_hero_cta_link", widget: "string", default: "/galerie" }
-          - { label: "Signature Image", name: "homepage_signature_image", widget: "image", required: false }
           - label: "Carousel Images"
             name: "carousel_images"
             widget: "list"
             summary: "{{fields.alt}}"
-            hint: "Images for the homepage photo carousel. Ensure paths are relative to /public (e.g. /uploads/media/image.jpg) or select from media library."
+            hint: "Images for the homepage photo carousel. Ensure paths are relative to /public (e.g. /galleries/main_gallery/image.jpg) or select from media library."
             fields:
               - { label: "Image", name: "src", widget: "image" } # 'src' to match prop expected by carousel
               - { label: "Alt Text", name: "alt", widget: "string", default: "Carousel image" }
