Refactor: Standardize gallery slugs and filenames to YYYY-MM-DD format

--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -44,10 +44,9 @@ collections:
     label: "Galleries"
     folder: "src/content/galleries"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    slug: "{{year}}-{{month}}-{{day}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Slug (URL part)", name: "slug", widget: "string", required: false, hint: "Optional. If empty, generated from title. E.g., 'my-first-gallery'" }
       - { label: "Date", name: "date", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false, picker_utc: true, required: true }
       - { label: "Cover Image", name: "cover_image", widget: "image" }
       - { label: "Description", name: "description", widget: "markdown", required: false }
