--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -44,10 +44,10 @@ collections:
     label: "Galleries"
     folder: "src/content/galleries"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}"
+    slug: "{{fields.date}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
-      - { label: "Date", name: "date", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false, picker_utc: true, required: true }
+      - { label: "Date", name: "date", widget: "datetime", date_format: "YYYY-MM-DD", time_format: false, picker_utc: true, format: "YYYY-MM-DD", required: true }
       - { label: "Cover Image", name: "cover_image", widget: "image" }
       - { label: "Description", name: "description", widget: "markdown", required: false }
       - label: "Images"
